--- a/20-Feb.ipynb
+++ b/20-Feb.ipynb
@@ -13,7 +13,7 @@
    "id": "8e00db43-29b1-4cdf-96a2-f2bf30b33962",
    "metadata": {},
    "source": [
-    "ET and POST are two of the most commonly used HTTP methods for sending requests from a client (such as a web browser) to a server.\n",
+    "GET and POST are two of the most commonly used HTTP methods for sending requests from a client (such as a web browser) to a server.\n",
     "\n",
     "GET method: The GET method is used to request a resource or information from the server. When a client sends a GET request to a server, it is asking the server to return a specific resource, such as a web page or an image, to the client. The GET request can include query parameters in the URL, and these parameters are visible to anyone who can see the request URL. For example, when you type a search query in a search engine, your browser sends a GET request to the server with the search term as a parameter in the URL.\n",
     "\n",
